@@ -33,6 +33,7 @@
 - Fixed: HTTPS certificate problem (issue 151)
 - Fixed: Resource leak in CrashRpt (issue 160)
 - Fixed: HttpEndRequest() fails. GetLastError() = ERROR_INTERNET_TIMEOUT (12002) (issue 138)
+- Fixed: Memory allocation in CCrashHandler::GetExceptionPointers can fail (issue 157)
 
 
 --- Ver. 1.3.0 ---
